Making the padding 10%

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -1,8 +1,8 @@
-body {
+html {
   background-color: #EEEBE3;
   width: 80%;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 h1 {
