--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -9,11 +9,11 @@ h1 {
   text-align: center;
   font-family: 'Roboto Mono', monospace;
   font-size: 46px;
-  color: black;
+  color: white;
 }
 
 h2 {
-  color: #black;
+  color: white;
   text-align: center;
   font-family: 'Roboto Mono', monospace;
   font-size: 38px;
@@ -29,5 +29,5 @@ video {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  opacity: 0.4;
+  opacity: 0.2;
 }
