--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -33,7 +33,7 @@ video {
 }
 
 button {
-  border: 2px;
+  border: 40%;
   border-color: white;
   color: white;
   font-family: 'Roboto Mono', monospace;
