changing the animations and trying to make the buttons work

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -40,7 +40,9 @@ video {
   color: white;
   font-family: 'Roboto Mono', monospace;
   text-align: center;
-
+  animation-delay: 2s;
+  animation-duration: 5s;
+  background-color: black;
 }
 
 @keyframes buttons {
