--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -32,7 +32,7 @@ video {
   filter: brightness(50%);
 }
 
-.buttons {
+.buttons, button {
   padding-left: 40%;
   padding-right: 40%;
   font-size: 38px;
