--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -33,8 +33,8 @@ video {
 }
 
 .buttons, button {
-  padding-left: 40%;
-  padding-right: 40%;
+  width: 40%;
+  height: 10%;
   font-size: 38px;
   border-color: white;
   color: white;
@@ -49,4 +49,8 @@ video {
   0% {opacity: 0.1}
   50% {opacity: 0.5}
   100% {opacity: 1}
+}
+
+.Step1_button {
+  float: left;
 }
