trying to make the buttons transparent

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -44,6 +44,7 @@ button {
   animation-duration: 5s;
   outline: none;
   background-color: transparent;
+  border: none;
 }
 
 @keyframes buttons {
