--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -42,7 +42,7 @@ button {
   text-align: center;
   background-color: Transparent;
   background-repeat:no-repeat;
-  border: none;
+  border: 1px;
   cursor:pointer;
   overflow: hidden;
   outline:none;
