--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -52,3 +52,64 @@ video {
   font-weight: bolder;
   font-size: 39px;
 }
+
+.navbar {
+  overflow: hidden;
+  background-color: Transparent;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.navbar a {
+  float: left;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 28px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: grey;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: Transparent;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  color: grey;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
