--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -57,6 +57,7 @@ video {
   overflow: hidden;
   background-color: Transparent;
   font-family: 'Roboto Mono', monospace;
+  top: 0;
 }
 
 .navbar a {
@@ -71,6 +72,7 @@ video {
 .dropdown {
   float: left;
   overflow: hidden;
+  top: 0;
 }
 
 .dropdown .dropbtn {
@@ -95,6 +97,7 @@ video {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  top: 0;
 }
 
 .dropdown-content a {
@@ -108,6 +111,7 @@ video {
 
 .dropdown-content a:hover {
   color: grey;
+  background-color: Transparent;
 }
 
 .dropdown:hover .dropdown-content {
