fixing nav bar again

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -57,7 +57,7 @@ video {
   overflow: hidden;
   background-color: Transparent;
   font-family: 'Roboto Mono', monospace;
-  top: 0;
+  top: 0px;
 }
 
 .navbar a {
@@ -72,7 +72,7 @@ video {
 .dropdown {
   float: left;
   overflow: hidden;
-  top: 0;
+  top: 0px;
 }
 
 .dropdown .dropbtn {
@@ -96,8 +96,8 @@ video {
   background-color: Transparent;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  top: 0;
+  z-index: 10;
+  top: 0px;
 }
 
 .dropdown-content a {
