changing the height

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -59,6 +59,7 @@ video {
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  height: 5%;
 }
 
 .navbar a {
