--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -60,4 +60,10 @@ video {
   left: 0;
   z-index: 10;
   color: white;
+  width: 100%;
+  height: 5%;
+}
+
+.nav_bar ul {
+  display: inline-flex;
 }
