--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -56,6 +56,9 @@ video {
 .navbar {
   overflow: hidden;
   background-color: #333;
+  width: 100%;
+  height: 5%;
+  top: 0;
 }
 
 .navbar a {
@@ -93,7 +96,7 @@ video {
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 10;
 }
 
 .dropdown-content a {
