--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -55,7 +55,7 @@ video {
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
   width: 100%;
   height: 5%;
   top: 0;
