making the website look better

--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -85,6 +85,7 @@ video {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  text-align: center;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
