--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -55,7 +55,7 @@ video {
 
 .navbar {
   overflow: hidden;
-  background-color: black;
+  background-color: Transparent;
   width: 100%;
   height: 5%;
   top: 0;
@@ -63,7 +63,7 @@ video {
 }
 
 .navbar a {
-  float: left;
+  float: center;
   font-size: 16px;
   color: white;
   text-align: center;
