--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -63,7 +63,7 @@ video {
 }
 
 .navbar a {
-  float: center;
+  float: none;
   font-size: 16px;
   color: white;
   text-align: center;
@@ -95,7 +95,7 @@ video {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: Transparent;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 10;
