--- a/Website/stylesheet.css
+++ b/Website/stylesheet.css
@@ -103,7 +103,7 @@ video {
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -116,4 +116,5 @@ video {
 
 .dropdown:hover .dropdown-content {
   display: block;
+  background-color: red;
 }
