--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,14 @@ font-size: 38px;
 font-weight: bold;
 }
 
+p {
+  color: white;
+  text-align: center;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 24px;
+  font-weight: bold;
+  }
+
 li {
   color: white;
   text-align: left;
