--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ p {
   text-align: center;
   font-family: 'Roboto Mono', monospace;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: normal;
   }
 
 li {
