changed the text align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ font-weight: bold;
 
 p {
   color: white;
-  text-align: center;
+  text-align: left;
   font-family: 'Roboto Mono', monospace;
   font-size: 24px;
   font-weight: normal;
