--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ font-weight: bold;
 
 h4 {
 color: white;
-text-align: center;
+text-align: left;
 font-family: 'Roboto Mono', monospace;
 font-size: 32px;
 font-weight: bold;
