--- a/stylesheet.css
+++ b/stylesheet.css
@@ -160,7 +160,6 @@ video {
 }
 
 .HTML_hierarchy img {
-  float: right;
-  margin-left: 2%;
-  z-index: 0;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
 }
