--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,3 +163,21 @@ video {
   margin-top: 2.5%;
   margin-bottom: 2.5%;
 }
+
+.Getting_Started a {
+  font-size: 24px;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  text-align: center;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
+.Getting_Started img {
+  float: right;
+  margin-left: 5%;
+}
