--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,3 +182,11 @@ video {
   margin-left: 5%;
   right: 0;
 }
+
+pre {
+  color: white;
+  text-align: left;
+  font-family: monospace;
+  font-size: 24px;
+  font-weight: normal;
+}
