--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,12 +87,16 @@ video {
 }
 
 .navbar {
-  overflow: hidden;
   background-color: Transparent;
   width: 100%;
   height: 5%;
-  top: 0;
+  padding-right: 10%;
   font-family: 'Roboto Mono', monospace;
+  background-color: black;
+  margin-bottom: 2.5%;
+  position:fixed;
+  top: 0;
+  z-index: 11;
 }
 
 .navbar a {
