--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,6 +97,7 @@ video {
   margin-bottom: 2.5%;
   position:fixed;
   top: 0;
+  left: 10%;
   z-index: 11;
 }
 
@@ -128,6 +129,7 @@ video {
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
+  border-radius: 20px;
 }
 
 .dropdown-content {
@@ -137,6 +139,7 @@ video {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 10;
+  border-radius: 20px;
 }
 
 .dropdown-content a {
