--- a/stylesheet.css
+++ b/stylesheet.css
@@ -258,19 +258,12 @@ table {
   overflow: hidden;
   width: 80%;
   position: absolute;
-  border: black;
   background: rgb(38,38,38);
-background: linear-gradient(0deg, rgba(38,38,38,1) 6%, rgba(22,22,22,1) 36%, rgba(5,5,5,1) 62%, rgba(0,0,0,1) 72%);
+  background: linear-gradient(0deg, rgba(38,38,38,1) 6%, rgba(22,22,22,1) 36%, rgba(5,5,5,1) 62%, rgba(0,0,0,1) 72%);
 }
 
-table th {
+table th, td {
   padding: 2%;
-  border: black solid thick;
-  border-collapse: collapse;
-}
-
-table td {
-  padding: 2%;
-  border: transparent;
+  border: rgb(85, 84, 84) solid thick;
   border-collapse: collapse;
 }
