--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,6 +43,7 @@ p {
   font-family: 'Roboto Mono', monospace;
   font-size: 24px;
   font-weight: normal;
+  z-index: 10;
 }
 
 li {
@@ -243,27 +244,20 @@ code {
 th {
   font-weight: bolder;
   font-size: 32px;
-  width: 20%;
 }
 
-td {
-  width: 20%;;
-}
 
 table {
   font-size: 24px;
   color: white;
   font-family: 'Roboto Mono', monospace;
   text-align: center;
-  overflow: hidden;
   width: 80%;
   position: absolute;
   background: rgb(38,38,38);
-  background: linear-gradient(0deg, rgba(38,38,38,1) 6%, rgba(22,22,22,1) 36%, rgba(5,5,5,1) 62%, rgba(0,0,0,1) 72%);
-}
-
-table th, td {
   padding: 2%;
-  border: rgb(85, 84, 84) solid thick;
+  border: rgb(85, 84, 84) solid;
   border-collapse: collapse;
+  background: linear-gradient(0deg, rgba(38,38,38,1) 6%, rgba(22,22,22,1) 36%, rgba(5,5,5,1) 62%, rgba(0,0,0,1) 72%);
+  z-index: 1;
 }
