--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,6 +67,10 @@ video {
   z-index: -1;
 }
 
+img {
+  border-radius: 5px;
+}
+
 .homepage_buttons {
   width: 45%;
   height: 10%;
@@ -92,7 +96,7 @@ video {
 .navbar {
   background-color: Transparent;
   width: 80%;
-  height: 5%;
+  height: 5.6%;
   padding-right: 10%;
   font-family: 'Roboto Mono', monospace;
   background-color: black;
@@ -101,6 +105,7 @@ video {
   top: 0;
   left: 10%;
   z-index: 11;
+  border-radius: 20px;
 }
 
 .navbar a {
@@ -110,11 +115,13 @@ video {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  border-radius: 20px;
 }
 
 .dropdown {
   float: left;
   overflow: hidden;
+  border-radius: 20px;
 }
 
 .dropdown .dropbtn {
@@ -127,10 +134,11 @@ video {
   font-family: inherit;
   margin: 0;
   text-align: center;
+  border-radius: 20px;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #e29f4b;
   border-radius: 20px;
 }
 
@@ -139,13 +147,12 @@ video {
   position: absolute;
   background-color: Transparent;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 10;
   border-radius: 20px;
 }
 
 .light-mode .dropdown-content {
-    background-color: #d5b68e;
+    background-color: #ffdaaa;
     color: black; 
     display: none;
     position: absolute;
@@ -166,7 +173,7 @@ video {
 }
 
 .Light-mode:hover{
-  background-color: red;
+  background-color:#e29f4b;
 }
 
 .light-mode .Light-mode:hover{
@@ -175,7 +182,7 @@ video {
 
 .light-mode .dropdown:hover .dropdown-content {
   display: block;
-  background-color: #ffdaaa;
+  background-color: #d5b68e;
   color: black;
   border-radius: 20px;
 }
@@ -211,12 +218,11 @@ video {
   color: black;
 }
 
-.light-mode .Light-mode {
-  background-color: #d5b68e;
+.light-mode .Light-mode:hover {
+  background-color: #e29f4b;
 }
 
-.light-mode .dropdown-content a {
-
+.dropdown-content a {
   float: none;
   color: white;
   padding: 12px 16px;
@@ -352,3 +358,74 @@ input {
   height: auto;
 }
 
+.light-mode {
+  background-color: #b69b79;
+
+}
+
+.light-mode code {
+  background-color:#7c6952;
+}
+
+.light-mode p {
+  color: black;
+}
+
+.light-mode h1 {
+  color: black;
+}
+
+.light-mode h2 {
+  color: black;
+}
+
+.light-mode h3 {
+  color: black;
+}
+
+.light-mode h4 {
+  color: black;
+}
+
+.light-mode h5 {
+  color: black;
+}
+
+.light-mode h6 {
+  color: black;
+}
+
+.light-mode tbody {
+  color: black;
+}
+.light-mode thead {
+  color: black;
+}
+
+.light-mode table {
+  font-size: 24px;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  text-align: center;
+  width: 100%;
+  background: black;
+  padding: 3%;
+  border-collapse: collapse;
+  background: rgb(182,155,121);
+  border: black solid;
+  background: linear-gradient(180deg, rgba(182,155,121,1) 6%, rgba(213,182,142,1) 36%, rgba(238,205,161,1) 62%, rgba(255,218,170,1) 72%);
+  z-index: 1;
+  margin-bottom: 5%;
+}
+
+.light-mode ol {
+  color: black;
+}
+
+.light-mode ul {
+  color: black;
+}
+
+.light-mode li {
+  color: black;
+}
