--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ img {
 
 .navbar {
   background-color: Transparent;
-  width: 80%;
+  width: 79%;
   height: 5.6%;
   padding-right: 10%;
   font-family: 'Roboto Mono', monospace;
@@ -427,5 +427,77 @@ input {
 }
 
 .light-mode li {
+  color: black;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+#progressbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  border-radius: 10px;
+  background: linear-gradient(to top, #008aff,#00ffe7);
+  animation: animate 5s linear infinite;
+}
+
+#scrollpath {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  height: 100%;
+  background: rgba(255,255,255,0.05);
+}
+
+#progressbar :before, 
+#progressbar :after
+{
+  content: '';
+  position: fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #008aff,#00ffe7);
+  filter: blur(10px);    
+}
+
+
+
+@keyframes animate 
+{
+  0%,100%
+  {
+    filter: hue-rotate(0deg);
+  }
+  50%
+  {
+    filter: hue-rotate(360deg);
+  }
+}
+
+#percent 
+{
+  position: fixed;
+  top: 50%;
+  right: 15px;
+  font-size: 16px;
+  transform: translateY(-50%);
+  font-family: 'Roboto Mono', monospace;
+  color: white;
+}
+
+.light-mode #percent 
+{
+  position: fixed;
+  font-family: 'Roboto Mono', monospace;
+  top: 50%;
+  right: 15px;
+  font-size: 16px;
+  transform: translateY(-50%);
   color: black;
 }
