--- a/stylesheet.css
+++ b/stylesheet.css
@@ -319,6 +319,7 @@ code {
 
 .Imagesinfo a {
   all: inherit;
+  text-decoration: underline;
 }
 
 th {
@@ -486,9 +487,11 @@ input {
   top: 50%;
   right: 15px;
   font-size: 16px;
-  transform: translateY(-50%);
+  transform: translateY(-50%) rotateX(180deg) rotateY(180deg);
   font-family: 'Roboto Mono', monospace;
   color: white;
+  writing-mode: vertical-rl;
+  text-orientation: sideways;
 }
 
 .light-mode #percent 
@@ -496,8 +499,12 @@ input {
   position: fixed;
   font-family: 'Roboto Mono', monospace;
   top: 50%;
-  right: 15px;
+  right: 0px;
   font-size: 16px;
   transform: translateY(-50%);
   color: black;
+}
+
+a {
+  text-decoration: underline;
 }
